--- a/views/samplebooks/books.ejs
+++ b/views/samplebooks/books.ejs
@@ -12,7 +12,7 @@
                             </h5>
                             <small class="text-muted"><B>Author:-</B>  <%= books[i].author %> </small>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="/books/<%=books[i]._id %> " class="btn btn-info">View</a>
+                            <a href="/books/<%=books[i]._id %> " class="btn btn-dark">View</a>
                         </div>
                     </div>
                 </div>
@@ -26,7 +26,7 @@
                             </h5>
                             <small class="text-muted"><B>Author:-</B> <%= books[i+1].author %> </small>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="/books/<%=books[i+1]._id %>" class="btn btn-info">View</a>
+                            <a href="/books/<%=books[i+1]._id %>" class="btn btn-dark">View</a>
                         </div>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                             </h5>
                             <small class="text-muted"><B>Author:-</B> <%= books[i+2].author %> </small>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="/books/<%=books[i+2]._id %> " class="btn btn-info">View</a>
+                            <a href="/books/<%=books[i+2]._id %> " class="btn btn-dark">View</a>
                         </div>
                     </div>
                 </div>
