--- a/views/ebooks/newebooks.ejs
+++ b/views/ebooks/newebooks.ejs
@@ -4,14 +4,6 @@
         <div class="row">
             <h2>Search That E-book You Want...</h2>
             <form action="/search" method="post">
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" name="query" id="inlineCheckbox1" value="query">
-                    <label class="form-check-label" for="inlineCheckbox1">Query</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" name="author" id="inlineCheckbox2" value="author">
-                    <label class="form-check-label" for="inlineCheckbox2">Author</label>
-                </div>
                 <input type="text" name="searchquery" value="">
                 <button class="btn btn-dark">Search</button>
             </form>
@@ -19,7 +11,7 @@
         <hr>
         <h2>New Arrivals</h2>
         <br>
-        <% for(let i=0;i<18;i+=3){%>
+        <% for(let i=1;i<ebooks.length-3;i+=3){%>
             <div class="container-fluid">
                 <div class="row">
 
